[gd_scene load_steps=5 format=2]

[ext_resource path="res://global/Global.gd" type="Script" id=1]
[ext_resource path="res://global/PlayerCamera.gd" type="Script" id=2]
[ext_resource path="res://global/PauseWindow/PauseWindow.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "scenechange"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Global" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
script = ExtResource( 2 )

[node name="SceneChanger" type="Node2D" parent="PlayerCamera"]
position = Vector2( -640, -360 )
z_index = 999

[node name="ColorRect" type="ColorRect" parent="PlayerCamera/SceneChanger"]
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerCamera/SceneChanger"]
anims/scenechange = SubResource( 1 )

[node name="PauseWindow" parent="." instance=ExtResource( 3 )]
